pkg/safeguards/constraints/ContainerEnforceProbes/constraint/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV2ContainerEnforceProbes
metadata:
  name: v2-container-enforce-probes
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    enforceProbes : ["my-probe"]
    excludedContainers: ["my-container"]
    excludedImages: ["nginx:latest"]
